--- a/package.json
+++ b/package.json
@@ -22,71 +22,80 @@
   },
   "dependencies": {
     "@alicloud/dysmsapi20170525": "^2.0.24",
-    "@alicloud/openapi-client": "^0.4.6",
+    "@alicloud/openapi-client": "^0.4.7",
     "@alicloud/tea-util": "^1.4.7",
-    "@nestjs/apollo": "^12.0.9",
-    "@nestjs/common": "^10.2.7",
-    "@nestjs/core": "^10.2.7",
-    "@nestjs/graphql": "^12.0.9",
-    "@nestjs/jwt": "^10.1.1",
+    "@as-integrations/fastify": "^2.1.1",
+    "@nestjs/apollo": "^12.0.11",
+    "@nestjs/common": "^10.2.10",
+    "@nestjs/core": "^10.2.10",
+    "@nestjs/graphql": "^12.0.11",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.2",
-    "@nestjs/platform-express": "^10.2.7",
-    "@nestjs/typeorm": "^10.0.0",
-    "@types/ali-oss": "^6.16.10",
+    "@nestjs/platform-fastify": "^10.2.10",
+    "@nestjs/swagger": "^7.1.16",
+    "@nestjs/typeorm": "^10.0.1",
+    "@types/ali-oss": "^6.16.11",
     "@types/lodash": "^4.14.202",
     "@types/md5": "^2.3.5",
-    "@types/passport-jwt": "^3.0.12",
+    "@types/passport-jwt": "^3.0.13",
     "@types/uuid": "^9.0.7",
     "ali-oss": "^6.18.1",
-    "apollo-server-express": "^3.12.1",
+    "apollo-server-express": "^3.13.0",
     "axios": "^1.6.2",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "dayjs": "^1.11.10",
+    "deepmerge": "^4.3.1",
     "dotenv": "^16.3.1",
+    "fastify": "^4.24.3",
     "graphql": "^16.8.1",
     "lodash": "^4.17.21",
     "md5": "^2.3.0",
-    "mysql2": "^3.6.2",
+    "meilisearch": "^0.36.0",
+    "mysql2": "^3.6.5",
     "nest-wechatpay-node-v3": "^1.0.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "sanitize-html": "^2.11.0",
     "type-graphql": "^1.1.1",
     "typeorm": "^0.3.17",
     "uuid": "^9.0.1",
+    "validator": "^13.11.0",
     "wechatpay-node-v3": "^2.1.6"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.2.0",
-    "@nestjs/schematics": "^10.0.2",
-    "@nestjs/testing": "^10.2.7",
-    "@swc/cli": "^0.1.62",
-    "@swc/core": "^1.3.95",
-    "@types/express": "^4.17.20",
-    "@types/jest": "^29.5.6",
-    "@types/node": "^20.8.8",
-    "@types/supertest": "^2.0.15",
-    "@typescript-eslint/eslint-plugin": "^6.9.0",
-    "@typescript-eslint/parser": "^6.9.0",
-    "eslint": "^8.52.0",
+    "@nestjs/cli": "^10.2.1",
+    "@nestjs/schematics": "^10.0.3",
+    "@nestjs/testing": "^10.2.10",
+    "@swc/cli": "^0.1.63",
+    "@swc/core": "^1.3.99",
+    "@types/jest": "^29.5.10",
+    "@types/node": "^20.10.0",
+    "@types/sanitize-html": "^2.9.5",
+    "@types/supertest": "^2.0.16",
+    "@types/validator": "^13.11.7",
+    "@typescript-eslint/eslint-plugin": "^6.12.0",
+    "@typescript-eslint/parser": "^6.12.0",
+    "eslint": "^8.54.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.1.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.29.0",
-    "eslint-plugin-jest": "^27.4.3",
+    "eslint-plugin-jest": "^27.6.0",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-unused-imports": "^3.0.0",
     "jest": "^29.7.0",
     "plop": "^4.0.0",
-    "prettier": "^3.0.3",
+    "prettier": "^3.1.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
-    "ts-loader": "^9.5.0",
+    "ts-loader": "^9.5.1",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.2.2"
+    "typescript": "^5.3.2"
   },
   "jest": {
     "moduleFileExtensions": [
