--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@types/passport-jwt": "^3.0.13",
     "@types/uuid": "^9.0.7",
     "ali-oss": "^6.18.1",
-    "apollo-server-express": "^3.13.0",
+    "apollo-server-fastify": "^3.13.0",
     "axios": "^1.6.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
